@startuml

package "models" {
    class Magasin
    class Produit
    class Stock
    class Vente
    class VenteProduit
}

package "services" {
    class MagasinService
    class ProduitService
    class StockService
    class VenteService
    class PanierService
}

package "views" {
    class views.py
}

package "management" {
    class initialise_db.py
}

package "tests" {
    class tests.py
}

' Relations ORM
Magasin "1" o-- "*" Stock : possède >
Produit "1" o-- "*" Stock : stocké dans >
Magasin "1" o-- "*" Vente : réalise >
Vente "1" o-- "*" VenteProduit : contient >
Produit "1" o-- "*" VenteProduit : vendu dans >

' Services utilisent les modèles
MagasinService ..> Magasin
ProduitService ..> Produit
StockService ..> Stock
VenteService ..> Vente
VenteService ..> VenteProduit
VenteService ..> Produit
VenteService ..> Stock
VenteService ..> Magasin

' Views utilise les services
views.py ..> MagasinService
views.py ..> ProduitService
views.py ..> StockService
views.py ..> VenteService

' Commande d'initialisation utilise les modèles
initialise_db.py ..> Magasin
initialise_db.py ..> Produit
initialise_db.py ..> Stock

' Tests importent tout
tests.py ..> MagasinService
tests.py ..> ProduitService
tests.py ..> StockService
tests.py ..> VenteService
tests.py ..> Magasin
tests.py ..> Produit
tests.py ..> Stock
tests.py ..> Vente
tests.py ..> VenteProduit

@enduml